--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.6",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
