Upgrade Next.js to v16 and regenerate lockfile for secure deployment

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@supabase/supabase-js": "^2.49.6",
     "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^12.12.1",
-    "next": "15.3.2",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.10",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
